--- a/setup-scripts/README
+++ b/setup-scripts/README
@@ -1,12 +1,20 @@
-scripts
--------
+scripts to setup model folders
+
+Rahul G. Krishnan
+rahul@cs.nyu.edu
+----------------
 Contains python scripts for different tasks
+driver-Setup.py : Main driver program
+Instructions
+	-Set the variables convExec (points to uai2fg, a converter packaged within libDAI) and exactExec (exact is a wrapper in libdai-tools)
+	-Set the string in folderName to point to the folder you would like to setup (eg:SyntheticGrids_5x5)
+	-Fill stepsToDo (Always do step 2 at the minimum and do not run step 1/3 for large graphs)
+	-run the file
 
-convertSynthetic.py : Convert from David's graph representation into UAI or Tamir's file format
+convertUAItoMAT.py : Convert from UAI to MATLAB format
 
-Steps for driver-Setup.py
-1] computeExact		: Convert UAI to FG and compute exact values using JT
-2] exactToMat.py       : Reads in the output of libDAI's JT and converts it into MATLAB format for analysis
-3] runTRWBP.py 		: Run TRWBP with libDAI
-4] trwToMAT.py 		: Converts the result of trwbp to MATLAB
-5] convertUAItoMAT.py  : Converts UAI files to the MATLAB format required to read Fields,List,Cardinality etc.
+computeExact.py : Compute exact values using junction tree (libDAI)
+exactToMAT.py : Move results from JT to MATLAB format
+
+perturbMAP.py :Small implementation of perturb and MAP (requires toulbar2)  
+runPerturbAndMAP.py
