--- a/experiments/README
+++ b/experiments/README
@@ -1,4 +1,11 @@
+Experiments
+
+Rahul G. Krishnan
+rahul@cs.nyu.edu
+
 In order to run experiments, first create a config file
 You only need to specify configurations that are different from default.cfg
+Important: Make sure that rootfolder is set to the rootpath of the fw-inference directory
+where the test cases are held
 
-
+You can see examples of how to invoke the experiment in any of the .sh files
